Fix sidebar auto-close on mobile, fix background colour of hamburger button, fix sizing on login form, and more

--- a/components/Auth/auth-form.module.css
+++ b/components/Auth/auth-form.module.css
@@ -1,7 +1,7 @@
 .auth {
   margin: 4rem auto;
-  width: 50%;
-  max-width: 500px;
+  width: 95vw;
+  max-width: 470px;
   text-align: center;
   color: black;
   background-color: rgb(255, 255, 255);
@@ -53,7 +53,6 @@
 .loginButton {
   width: 90%;
   background-color: #fd4747;
-  /* background-color: #5f7386; */
   border: none;
   color: white;
   font-size: 1.3rem;
@@ -74,6 +73,7 @@
   font-size: 0.8rem;
   padding: 10px 10px;
   max-width: 50%;
+  border: 1px solid rgb(215, 215, 215);
 }
 
 .optionsBtnContainer button:last-of-type {
@@ -83,8 +83,29 @@
 
 .optionsBtnContainer button:last-of-type div {
   margin-left: 5px;
+  min-width: 20px;
   color: white;
-  padding: 5px;
+  padding: 7px;
   background-color: #fd4747;
   border-radius: 15px;
+}
+
+@media (max-width: 470px) {
+  .optionsBtnContainer {
+    margin-top: 18px;
+    flex-direction: column;
+  }
+  .optionsBtnContainer button {
+    font-size: 0.7rem;
+    max-width: 100%;
+  }
+  .optionsBtnContainer button:last-of-type {
+    margin-top: 7px;
+  }
+  .inputContainer input {
+    width: 100%;
+  }
+  .loginButton {
+    width: 100%;
+  }
 }
